--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,3 +1,31 @@
 .header {
   display: block;
 }
+
+.header__wrapper {
+  padding: 25px 32px;
+
+  @include viewport--md {
+    padding: 25px 36px;
+  }
+}
+
+.header__logo {
+  display: inline-flex;
+  padding: 0;
+  transition: $default-transition-settings;
+
+  &:focus,
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
+
+  svg {
+    width: 192px;
+    height: 24px;
+  }
+}
