--- a/source/sass/blocks/loader.scss
+++ b/source/sass/blocks/loader.scss
@@ -10,28 +10,29 @@
 }
 
 .loader__logo {
-  position: absolute;
-  top: calc(50% - 50px);
-  left: -1000px;
+  margin-top: auto;
+  margin-bottom: auto;
+
 
   @include viewport--md {
-    top: calc(50% - 35px);
     width: 550px;
     height: 70px;
   }
 }
 
-.loader__text {
+.loader__text-block {
+  position: absolute;
   margin: 0;
-  margin-top: auto;
-  margin-bottom: 100px;
+  bottom: 100px;
+}
+
+.loader__text {
   font-size: 24px;
   line-height: 22px;
   color: $color-default-black;
-  opacity: 0;
 }
 
-.loader__text--desctop {
+.loader__text--desktop {
   display: block;
 
   @include viewport--md {
