--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,7 +20,7 @@
 //---------------------------------
 @import "blocks/loader";
 @import "blocks/header";
-@import "blocks/main-content";
+@import "blocks/intro";
 
 
 // используйте это для отключения ховеров на тач устройствах
